Readed overflow to body to fix mobile editor issue.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -182,7 +182,10 @@
 // Main
 // ---------------
 
-html, body {
+html,
+body {
+    overflow-y: scroll;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
     -webkit-overflow-scrolling: touch;
 }
 
